--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -55,6 +55,15 @@
 
 <h2>Date range</h2>
   <form action="/setrange" method="post">
+    Start time:
+    <input type="time" name="start_clock">
+
+  </select>
+
+    End time:
+    <input type="time" name="end_clock">
+
+  
   <input type="text" name="daterange" size="12"
     {% if session.daterange is defined %}
          value="{{session.daterange}}"
@@ -88,18 +97,26 @@
     shown in each row (but the order is across then down; I would
     prefer down then across). 
     -->
+<form action="/list_events" method="post">
 {% if g.calendars is defined  %}
   <div class="row">
   {% for cal in g.calendars if cal.selected %}
           <div class="col-md-4">
-	   {{ cal.summary }}
+	   {{ cal.summary }} <input type="checkbox" name="calcheck" value={{cal.id}} /> 
           </div>
          {% if loop.index is divisibleby 3 %}
           </div> <div class="row">
          {% endif %}
   {% endfor %}
+
+  <input type="submit" value="Submit">
+
+
+
   </div>
 {% endif %}
+
+</form>
     
 
   </div>  <!-- container (for bootstrap) -->
