submit and tests
submit button and tests, one of the final submissions for all intents and purposes

--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -98,6 +98,8 @@
     prefer down then across). 
     -->
 <form action="/list_events" method="post">
+  <!-- Trying to get the form submit button out of the way -->
+  <input type="submit" value="Submit">
 {% if g.calendars is defined  %}
   {% for cal in g.calendars if cal.selected %}
         <div class="col-md-4">
@@ -116,12 +118,18 @@
             {% endif %}
          {% endif %}
   {% endfor %}
-  <input type="submit" value="Submit">
+  
 </div>
 
-  
+
+
+
+
+
 
 {% endif %}
+
+
 
 </form>
     
