Fixed time comparison functionality!
In project 7, dates were being compared, but not the time range for each day. Now it  does, as I now converted to arrow date and arrow time objects and compare them seperately.

--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -116,7 +116,7 @@
                 {% if event.id == cal.id %}
                   {% for key in event.events %}
                   <!-- How the events are displayed on the webpage -->
-                    {{ key.sum }}  Start: {{ key.start | fmtdate }} {{ key.start | fmttime }}  End: {{ key.end | fmtdate }} {{key.end | fmttime}}
+                    Busy Times: {{ key.sum }}  Start: {{ key.start | fmtdate }} {{ key.start | fmttime }}  End: {{ key.end | fmtdate }} {{key.end | fmttime}}
                   {% endfor %}
                 {% endif %}
               {% endfor %}
