MAJOR changes alert

--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -122,6 +122,17 @@
               {% endfor %}
             {% endif %}
          {% endif %}
+         <!-- New Stuff -->
+            {% if g.free is defined %}
+                {% for time in g.free %}
+                    {% if time.id == cal.id %}
+                        <h5> FREEEEEE TIMESSSSSS </h5>
+                        {% for event in  time.free_times %}
+                            {{ event.start }}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
   {% endfor %}
   
 </div>
