--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -35,7 +35,7 @@
 <body>
 <div class="container">
 
-<h1>Busy times</h1>
+<h1>Busy and Free Times for Appointments</h1>
 
 <!--
   -- If there are any warnings or other messages from a prior action,
@@ -53,7 +53,7 @@
   {% endif %}
 {% endwith %}
 
-<h2>Date range</h2>
+<h2>Enter Date and Time Range</h2>
   <form action="/setrange" method="post">
     Start time:
     <input type="time" name="start_clock" value="00:00:00">
@@ -114,9 +114,12 @@
             {% if g.events is defined %}
               {% for event in g.events %}
                 {% if event.id == cal.id %}
+                <h5> BUSY TIMES </h5>
                   {% for key in event.events %}
                   <!-- How the events are displayed on the webpage -->
-                    Busy Times: {{ key.sum }}  Start: {{ key.start | fmtdate }} {{ key.start | fmttime }}  End: {{ key.end | fmtdate }} {{key.end | fmttime}}
+                    <div class="row">
+                     {{ key.sum }}  Start: {{ key.start | fmtdate }} {{ key.start | fmttime }}  End: {{ key.end | fmtdate }} {{key.end | fmttime}}
+                   </div>
                   {% endfor %}
                 {% endif %}
               {% endfor %}
@@ -126,9 +129,14 @@
             {% if g.free is defined %}
                 {% for time in g.free %}
                     {% if time.id == cal.id %}
-                        <h5> FREEEEEE TIMESSSSSS </h5>
-                        {% for event in  time.free_times %}
-                            {{ event.start }}
+                    <h5> FREE TIMES </h5>
+                      {% for event in  time.free_times %}
+                      <!-- Displaying Busy Events on the page -->
+                          <div class="row">
+
+                           BEGINS: {{ event.start| fmtdate }} {{ event.start | fmttime }} ENDS: {{event.end | fmtdate}} {{event.end | fmttime}}
+
+                          </div>
                         {% endfor %}
                     {% endif %}
                 {% endfor %}
