--- a/meetings/templates/index.html
+++ b/meetings/templates/index.html
@@ -35,7 +35,8 @@
 <body>
 <div class="container">
 
-<h1>Busy and Free Times for Appointments</h1>
+<h1>Welcome to MeetMe</h1>
+Let's get started:
 
 <!--
   -- If there are any warnings or other messages from a prior action,
