--- a/meetings/templates/final.html
+++ b/meetings/templates/final.html
@@ -30,11 +30,11 @@
 
 <body>
   <div class="container">
-    <h1> Meeting is finalized! </h1>
+    <h1> Meeting has been finalized. </h1>
 
     <h4> Meeting Identification: {{session.meeting_value}}</h4>
 
-    <h4> The final meeting time is: </h4>
+    <h4> Finalized meeting time: </h4>
     {{session.final_time[11:36] | fmtdate}} {{session.final_time[11:36] | fmttime}} to {{session.final_time[47:72] | fmttime}}
   </div>
 </body>
