--- a/meetings/templates/incorrectid.html
+++ b/meetings/templates/incorrectid.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="container">
-    <h1> Your meeting was not found. Incorrect meeting ID. </h1>
+    <h1> No meetings found matching this ID. </h1>
   </div>
 </body>
 </html>
