--- a/meetings/templates/meeting.html
+++ b/meetings/templates/meeting.html
@@ -35,8 +35,8 @@
 <body>
 <div class="container">
 
-<h2>Meeting Created</h2>
-<h3>Selected Your Meeting Times </h3>
+<h2>New Meeting Proposal Created</h2>
+<h3>Your Chosen Meeting Times </h3>
 
 {% for time in session.meet.times %}
 <p> {{time.name}}
@@ -49,13 +49,13 @@ ENDS: {{time.end | fmtdate}} {{time.end | fmttime}}
 <br>
 
 <div class="row">
-  <h4>Link to share for other people in the meeting!</h4>
+  <h4>Share this link with meeting attendees. They will use it to note their availablity.</h4>
 </div>
 
 <p><a href="{{session.user_link}}" target="_blank">{{session.user_link}}</a></p>
 
 <div class="row">
-  <h4>This is your link for the final step of your meeting! </h4>
+  <h4>Meeting Admin: follow this link to review and finalize your planned meeting. </h4>
   <p><a href="{{session.admin_link}}" target="_blank">{{session.admin_link}}</a></p>
 
 </div>
