--- a/meetings/templates/user_view.html
+++ b/meetings/templates/user_view.html
@@ -31,7 +31,7 @@
 
 <body>
   <div class="container">
-    <h1> Here are your calendars. </h1>
+    <h1> Your Calendars </h1>
     {% if g.calendars is not defined %}
         <form action="/usersetrange" method="post">
             <button type="submit">Log in</button>
