--- a/meetings/templates/admin_view.html
+++ b/meetings/templates/admin_view.html
@@ -44,7 +44,7 @@
     {% endfor %}
   </p>
 {% endfor %}
-<button type="submit">Finalize Meeting Time</button>
+<button type="submit">Finalize Meeting Time?</button>
 </form>
   </div>
 </body>
