--- a/meetings/templates/done.html
+++ b/meetings/templates/done.html
@@ -26,7 +26,7 @@
 
 <body>
   <div class="container">
-    <h1> Your response has been added and sent to the meeting planner. </h1>
+    <h1> Your response has been added and is now visible to the meeting planner. </h1>
   </div>
 </body>
 </html>
