--- a/meetings/templates/meeting.html
+++ b/meetings/templates/meeting.html
@@ -12,17 +12,12 @@
     href="/static/css/busy.css"
 />
 
-<!-- jquery from a content distribution network; probably cached -->
+
 <script type="text/javascript"
      src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
 </script>
 
-<!-- Ideally the rest of our javascript dependencies would be
-     bundled and minified with 'browserify', but I've found that
-     it difficult to handle browserify dependencies for class
-     projects.  So, we'll pick up moment and a date range picker
-     from CDNs instead.
--->
+
 
 <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
@@ -55,7 +50,7 @@ ENDS: {{time.end | fmtdate}} {{time.end | fmttime}}
 <p><a href="{{session.user_link}}" target="_blank">{{session.user_link}}</a></p>
 
 <div class="row">
-  <h4>Meeting Admin: follow this link to review and finalize your planned meeting. </h4>
+  <h4>Meeting Admin: Follow this link to review responses and finalize your planned meeting. </h4>
   <p><a href="{{session.admin_link}}" target="_blank">{{session.admin_link}}</a></p>
 
 </div>
