--- a/meetings/templates/user_list.html
+++ b/meetings/templates/user_list.html
@@ -107,7 +107,7 @@
 
 <div class="col-md-6">
   <h3> Admin's Suggested Meeting Times </h3>
-  <p>Choose times you are willing to meet</p>
+  <p>Choose times that work for you</p>
   <form action="/update" method="post">
     {% for time in session.meet.times %}
   <p>
