--- a/meetings/templates/user_view.html
+++ b/meetings/templates/user_view.html
@@ -11,17 +11,12 @@
 <link rel="stylesheet" type="text/css"
     href="/static/css/busy.css"/>
     
-<!-- jquery from a content distribution network; probably cached -->
+
 <script type="text/javascript"
      src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
 </script>
 
-<!-- Ideally the rest of our javascript dependencies would be
-     bundled and minified with 'browserify', but I've found that
-     it difficult to handle browserify dependencies for class
-     projects.  So, we'll pick up moment and a date range picker
-     from CDNs instead.
--->
+
 
 <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
@@ -41,7 +36,7 @@
     {% if g.calendars is defined %}
     <form method="POST" action="/userlist_events">
    <fieldset>
-   <legend> Choose Calendars </legend>
+   <legend> Choose Calendars to View</legend>
       {% for cal in g.calendars %}
         <div class="col-md-4">
         {% if loop.index is divisibleby 1 %}
